--- a/index.html
+++ b/index.html
@@ -5,17 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AWEB-U3-P1-20213TN054</title>
-    <style>
-        .title{
-            color: aqua;
-        }
-        .sub-title{
-            color: red;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1 class="title">Bienvenid@</h1>
     <h2 class="sub-title">Primer GitHub Page</h2>
+    <button type="button" id="btn-pulse">Pulsame</button>
+    <script src="app.js"></script>
 </body>
 </html>
