Integracion de bootstrap

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <h1 class="title">Bienvenid@</h1>
     <h2 class="sub-title">Primer GitHub Page</h2>
+    <a href="page1.html">Pagina Bootstrap</a>
     <button type="button" id="btn-pulse">Pulsame</button>
     <script src="app.js"></script>
 </body>
